fix spacing in checkboxes

--- a/app/javascript/src/stylesheets/pages/dashboard.scss
+++ b/app/javascript/src/stylesheets/pages/dashboard.scss
@@ -1,5 +1,5 @@
-.dashboard, .all_casa_admins-dashboard  {
-
+.dashboard,
+.all_casa_admins-dashboard {
   .container {
     @media (max-width: 1200px) {
       max-width: 95%;
@@ -30,7 +30,7 @@
   .button {
     border: 1px black solid;
     padding: 10px;
-    background-color: #00447C;
+    background-color: #00447c;
   }
 
   .button > a {
